Fix empty links and contrast issues

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,16 @@ body {
 .u-width-100{
     width: 100%;
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
 /* Border box fix */
 * {
     box-sizing: border-box;
@@ -868,7 +878,7 @@ button {
     /* Padding */
     margin-top: -22px;
     /* Adjust vertical position */
-    color: white;
+    
     /* Text color */
     font-weight: bold;
     /* Bold font weight */
